# dj-core

./: .env  .env.sample  .gitignore  README.md  pyproject.toml
.github/workflows/: dev-pr.yml  dev.yml  production.yml
.run/: test.run.xml  test_utils.run.xml
config/: urls.py
config/settings/: base.py
dj-core/: apps.py  models.py  utils.py
dj-core/migrations/: 0001_initial.py
dj-core/tests/: test_decorators.py  test_managers.py  test_models.py  test_utils.py
djcore/: __init__.py  apps.py  decorators.py  models.py
djcore/migrations/: 0001_initial.py  0002_alter_authuser_table_alter_listitem_table.py
djcore/tests/: test_decorators.py  test_managers.py  test_models.py  test_utils.py
djstarter/: decorators.py  exceptions.py  managers.py  utils.py
djstarter/management/commands/: create_db.py
djstarter/tests/: test_utils.py
