[tool.poetry]
name = "dj-core"
version = "0.1.0"
description = ""
authors = ["Adrian <adrian@rydeas.com>"]

[tool.poetry.dependencies]
python = "^3.8"

coverage = "~6.2"
django-environ = "~0.8.1"
psycopg2-binary = "^2.9.2"
python-dotenv = "~0.19.0"
wheel = "~0.36.2"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "~3.2.1"
respx = "~0.19.0"
tblib = "~1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
